@@ -4,6 +4,7 @@ Changes for 1.3.3.2
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
 -Added an ability to change sound setup (sample rate, channels, sample format, and the buffer size) via the [sound] INI section
 -Optimized the work of a lazy-decompression algorithm workflow
+-At credits, the bible quote has been replaced with a meme
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
